# ModernCMakePSPExample

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
cmake/: ArduinoJson.cmake  Catch2.cmake
docs/: CMakeLists.txt
include/modern/: pspdebugio.hpp
src/: CMakeLists.txt  lib.cpp  pspdebugio.cpp
tests/: CMakeLists.txt  testlib.cpp
